Use flex in menu to prevent erroneous whitespace

--- a/web/style/menu.css
+++ b/web/style/menu.css
@@ -17,6 +17,10 @@ nav {
 	display: none;
 }
 
+#menuContainer {
+	display: flex;
+}
+
 .menuItem, label[for=menuController] {
 	display: inline-block;
 	padding: 0.75em;
@@ -24,11 +28,23 @@ nav {
 	font-weight: 600;
 	text-decoration: none;
 
+	white-space: nowrap;
+
 	color: rgba(255, 255, 255, 0.87);
 }
 
 .menuItem:hover  {
 	background: rgba(255, 255, 255, 0.12);
+}
+
+@media screen and (min-width: 600px) {
+	label[for=menuController] {
+		display: none;
+	}
+
+	#menuMain {
+		float: right;
+	}
 }
 
 @media screen and (max-width: 599px) {
@@ -44,20 +60,10 @@ nav {
 		display: block;
 		position: absolute;
 
-		background: rgb(66, 66, 66);
+	background: rgb(55, 71, 79); /* Material design Slate Grey 800; #37484F */
 	}
 
 	#menuController:checked ~ label[for=menuController] {
 		background: rgba(255, 255, 255, 0.12);
-	}
-}
-
-@media screen and (min-width: 600px) {
-	label[for=menuController] {
-		display: none;
-	}
-
-	#menuMain {
-		float: right;
 	}
 }
